# next-flow

./: CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_28_1528-1bdd250c71a4_create_initial_tables.py  2026_03_29_0619-75d214513e6f_add_message_and_user_settings_tables.py  2026_03_30_0515-a8f3c912e7d2_add_skill_extended_fields.py  2026_03_31_1430-9c7e8d2f1a3b_add_conversation_agent_id.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/models/: __init__.py  agent.py  conversation.py  mcp_server.py  message.py  settings.py  skill.py  tool.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  conversation.py  envelope.py  error.py  mcp_server.py  message.py  settings.py  skill.py  user.py
backend/app/services/: agent_service.py  auth_service.py  conversation_service.py  mcp_server_service.py  settings_service.py  skill_service.py  user_service.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_conversations.py  test_mcp_servers.py  test_memory.py  test_messages.py  test_settings.py  test_ws_chat.py
backend/tests/unit/: conftest.py  test_checkpointer.py  test_connection_manager.py  test_event_mapper.py  test_llm_factory.py  test_mcp_client.py  test_mcp_handler.py  test_mcp_manager.py  test_mcp_routes_wiring.py  (+12 more)
(+232 files in other folders)
