[project]
name = "nextflow-backend"
version = "0.1.0"
description = "NextFlow - Universal Agent Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0,<0.136.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "pyjwt[crypto]>=2.10.0",
    "pwdlib[argon2]>=0.2.0",
    "httpx>=0.28.0",
    "mcp>=1.26.0,<1.27.0",
    "email-validator>=2.0.0",
    "langgraph>=1.1.0,<2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langchain-community>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "minio>=7.2.0",
    "docker>=7.1.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
